--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -1,6 +1,6 @@
 body {
   /*background-image: url(background-image2.jpeg);*/
-  background-color: #0c005a;
+  background-color: #000080;
   background-repeat: no-repeat;
   height: 100%;
 }
@@ -28,7 +28,7 @@ ul {
 
 a {
   text-decoration: none;
-  color: yellow;
+  color: #ce9b01;
   float: right;
   margin-top: -12px;
   margin-left: 50px;
@@ -86,9 +86,21 @@ p {
 .About3 {
   width: 30%;
 }
-.Aboutme {
+.Aboutme,
+.projects {
   text-align: center;
 }
+
+.project-container {
+  position: relative;
+}
+.buttom-center {
+  position: absolute;
+  top: 20%;
+  left: 10%;
+  right: 10%;
+}
+
 .introduction,
 .imagediv {
   width: 50%;
@@ -97,7 +109,7 @@ p {
   padding: 0px 20px 20px 20px;
 }
 h1 {
-  color: yellow;
+  color: #ce9b01;
   font-size: 1.7rem;
   padding: 0px 20px 20px 20px;
 }
@@ -156,7 +168,6 @@ address {
   border: 1px solid rgb(25, 25, 88);
   border-radius: 5px;
   outline-style: none;
-  background-color: #0c005a;
   color: #b4b4e4;
 }
 
@@ -168,14 +179,13 @@ address {
   outline-style: none;
   border-radius: 5px;
   margin-bottom: 15px;
-  background-color: #0c005a;
   color: #b4b4e4;
   font-family: Poppins, sans-serif;
   font-size: 100%;
 }
 
 .submit {
-  border: 1px solid rgb(25, 25, 88);
+  border: 1px solid #000080;
   border-radius: 5px;
   width: 22%;
   height: 30px;
@@ -198,7 +208,7 @@ ul.skills li {
 .footer {
   display: flex;
   flex-direction: column;
-  margin-top: 100px;
+  margin-top: 50px;
   height: 100px;
   width: 100%;
   left: 0;
@@ -216,7 +226,7 @@ ul.footer-icons {
   padding: 0%;
 }
 a.icons {
-  color: yellow;
+  color: #ce9b01;
   padding: 10px;
   margin: 0%;
 }
