--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -15,11 +15,13 @@ html {
   font-family: Poppins, sans-serif;
 }
 .main {
+  position: relative;
   margin: 0 auto;
   padding: 10px;
-  font-size: 30px;
-  float: right;
+  font-size: 15px;
+  left: 95%;
 }
+
 ul {
   list-style: none;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -75,7 +77,7 @@ p,
 .Aboutme,
 .projects {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .project-container {
@@ -122,7 +124,9 @@ address {
   font-family: Poppins, sans-serif;
   font-size: 1.5rem;
 }
-
+h3{
+  color: #b4b4e4;
+}
 .flexcontainer2 {
   display: flex;
   flex-direction: row;
