--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -27,6 +27,14 @@ a {
   text-decoration: none;
 }
 
+li{
+  color: #50d8b8;
+}
+
+li span{
+  color: #384860;
+}
+
 h2,
 label,
 address {
@@ -123,7 +131,7 @@ p {
 
 .buttom-center {
   position: absolute;
-  top: 5%;
+  top: 10%;
   left: 10%;
   right: 10%;
 }
@@ -160,9 +168,9 @@ p {
 
 .images {
   width: 100%;
-  height: 200px;
+  height: 250px;
   border-radius: 5px;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 .courselist,
@@ -214,7 +222,6 @@ p {
 
 ul.courselist,
 ul.skills {
-  color: #384860;
   list-style: square;
 }
 
@@ -248,23 +255,39 @@ a.icons {
 
 /*Tablet styles (max-width: 768px) Mobile styles (max-width: 414px) */
 @media only screen and (max-width: 720px) {
+  p {
+    font-size: 100%;
+  }
+
+  h2 {
+    margin-top: -15px;
+    text-align: center;
+  }
+
+  form {
+    text-align: center;
+  }
+
   .flexcontainer2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
+
   .contactdiv,
   .additonal,
   .course {
     width: 100%;
     margin-top: 0px;
-    height: 340px;
+    height: 280px;
     padding: 0px 20px 20px 20px;
   }
+
   .contactdiv {
     height: 380px;
   }
+
   .flexcontainer {
     display: flex;
     flex-direction: column;
@@ -279,6 +302,7 @@ a.icons {
     align-items: center;
     flex-direction: column;
   }
+
   .image1 {
     align-items: center;
     display: flex;
@@ -287,9 +311,6 @@ a.icons {
     padding-bottom: 10px;
   }
 
-  p {
-    font-size: 100%;
-  }
   .icons {
     margin-top: 0px;
   }
@@ -301,36 +322,40 @@ a.icons {
     margin: 0px auto;
     width: 100%;
   }
+
   .button1 {
     width: 35%;
     margin: 0 auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
+
   .main {
     margin-left: -40px;
   }
-  h3,
-  h2 {
-    margin-top: -15px;
-    text-align: center;
-  }
+
   .footer {
     height: 70px;
   }
-  form {
-    text-align: center;
-  }
+
   .input1,
   .email,
   .inputcomment {
     width: 90%;
   }
+
+  .submit {
+  width: 25%;
+  height: 40px;
+  margin-top: 15px;
+}
+
   .flexcontainer3 {
     display: flex;
     flex-direction: column;
     width: 100%;
     justify-content: space-around;
   }
+
   .About1,
   .About2,
   .About3 {
@@ -339,6 +364,7 @@ a.icons {
     justify-content: center;
     padding: 0px 20px 20px 20px;
   }
+
   .introduction p {
     text-align: center;
   }
