Changed P colors again

--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -28,11 +28,11 @@ a {
 }
 
 li{
-  color: #005c7b;
+  color: #ccd6f6;
 }
 
 li span{
-  color: #005c7b;
+  color: #ccd6f6;
 }
 
 h2,
@@ -81,7 +81,7 @@ li.live {
 }
 
 p {
-  color: #005c7b;
+  color: #ccd6f6;
 }
 .a-of-portfolio,
 .portfolio-ps,
