--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -91,13 +91,9 @@ h3 {
   font-weight: 900;
 }
 
-.main {
-  position: relative;
-  width: 10%;
-  padding: 10px;
-  font-size: 15px;
-  top: 10px;
-  left: 90%;
+.front-end {
+  font-size: 30px;
+  font-weight: bolder;
 }
 
 li.live {
@@ -205,7 +201,7 @@ p {
   width: 100%;
   height: 250px;
   border-radius: 5px;
-  opacity: 0.3;
+  opacity: 0.4;
 }
 
 .courselist,
