--- a/cssfolder/styles.css
+++ b/cssfolder/styles.css
@@ -139,6 +139,7 @@ p {
 }
 
 .myname{
+  display: inline;
   color: #50d8b8;
   padding-left: 20px;
   font-size: 20px;
@@ -376,7 +377,7 @@ a.icons {
 
   .footer {
     height: 70px;
-    margin-top: 90px;
+    margin-top: 100px;
   }
 
   .input1,
